add profile/delivery ui

--- a/app/profile/components/side-bar/side-bar.module.css
+++ b/app/profile/components/side-bar/side-bar.module.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-
+  margin-bottom: 14px;
   font-weight: 500;
   font-size: 24px;
   text-transform: uppercase;
