--- a/app/order/order.module.css
+++ b/app/order/order.module.css
@@ -5,6 +5,30 @@
   color: var(--black);
 }
 
+@media screen and (min-width: 360px) {
+  .order {
+    padding-bottom: 16px;
+  }
+}
+
+@media screen and (min-width: 744px) {
+  .order {
+    padding-bottom: 44px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .order {
+    padding-bottom: 36px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .order {
+    padding-bottom: 16px;
+  }
+}
+
 .container {
   margin: 0 auto;
 }
@@ -38,6 +62,24 @@
     padding-left: 162px;
     padding-right: 162px;
     width: 1920px;
+  }
+}
+
+@media screen and (min-width: 744px) {
+  .search_container {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    width: 462px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .search_container {
+    margin: 0 auto;
+    display: block;
+    flex-direction: column;
+    width: 100%;
   }
 }
 
