--- a/app/profile/components/order/order-history.module.css
+++ b/app/profile/components/order/order-history.module.css
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  /* max-width: 462px; */
-  
+  padding: 24px 163px 374px 161px;
+  max-width: 1110px;
 }
-.aboveTableBlock{
+.aboveTableBlock {
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -21,14 +21,14 @@
   color: var(--black);
   margin-bottom: 22px;
 }
-.selectComponent{
+.selectComponent {
   position: relative;
-  top:-8px;
+  top: -8px;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 215px;
-  height: 40px ;
+  height: 40px;
   padding: 0px 12px;
   color: var(--black);
   border-radius: 25px;
@@ -46,4 +46,3 @@
   position: 'relative';
   z-index: 4;
 }
-
