--- a/app/profile/[userId]/profile.module.css
+++ b/app/profile/[userId]/profile.module.css
@@ -1,4 +1,5 @@
 .profile {
+  height: 100%;
   padding: 48px 0px 48px 0px;
   background-color: white;
   width: 100%;
@@ -7,5 +8,19 @@
 .profile__wrapper {
   display: grid;
   grid-template-columns: 300px auto;
-  /* column-gap: 1.5rem; */
+  height: 100%;
+  /* border: 1px solid blue; */
+}
+
+@media (max-width: 1919.99px) {
+}
+
+@media (max-width: 1439.99px) {
+  .profile__wrapper {
+    grid-template-columns: none;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 743.99px) {
 }
