--- a/app/profile/components/order/order-history.module.css
+++ b/app/profile/components/order/order-history.module.css
@@ -1,9 +1,9 @@
 .orderContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
   padding: 24px 163px 374px 161px;
-  max-width: 1110px;
+  width: fit-content;
+}
+.orderContent {
+  width: 786px;
 }
 .aboveTableBlock {
   display: flex;
