--- a/app/profile/components/favorites/favorites.module.css
+++ b/app/profile/components/favorites/favorites.module.css
@@ -24,3 +24,24 @@
   display: flex;
   width: 100%;
 }
+
+@media (max-width: 1439.99px) {
+  .shop__content {
+    width: 557px;
+  }
+}
+
+@media (max-width: 743.99px) {
+  .shop__content {
+    width: 100%;
+  }
+  .header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .titleFilter {
+    align-self: start;
+    margin-bottom: 28px;
+  }
+}
