--- a/components/order-user/order-user.module.css
+++ b/components/order-user/order-user.module.css
@@ -1,9 +1,92 @@
+/* ------ General rules ------ */
+
 .input:hover,
 .input:focus {
   border: 1px solid var(--black);
 }
 
+.input,
+.error_input,
+.big_input,
+.small_input,
+.building_unit {
+  width: 100%;
+  border-radius: 8px;
+  height: 32px;
+  padding-left: 8px;
+  padding-right: 8px;
+  border: 1px solid var(--grey);
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.error,
+.label,
+.subtotal {
+  font-family: var(--font);
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.header_contact,
+.header_delivery,
+.header_payment,
+.pay_button {
+  font-family: var(--font);
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.label_checkbox,
+.payment_checkbox,
+.save_checkbox,
+.price {
+  font-family: var(--font);
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.input_container,
+.label_checkbox,
+.inputs_container,
+.label,
+.flex_inputs_container,
+.input_container_flex,
+.save_checkbox,
+.submit_container,
+.price_container,
+.pay_button,
+.payment_container,
+.icons_container {
+  display: flex;
+}
+
+/* ------ Main styles ------ */
+
 .error_input {
+  border: 1px solid var(--red);
+}
+
+.error {
+  margin-top: 10px;
+  color: var(--red);
+}
+
+.form {
+  width: 328px;
+}
+
+.input_container {
+  flex-direction: column;
+  width: 100%;
+  gap: 32px;
+}
+
+.header_contact {
+  margin-bottom: 32px;
+}
+
+.input {
   width: 100%;
   border-radius: 8px;
   height: 32px;
@@ -11,42 +94,188 @@
   padding-left: 8px;
   padding-right: 8px;
 
-  border: 1px solid var(--red);
+  border: 1px solid var(--grey);
+}
+
+.header_delivery {
+  margin-top: 24px;
+  margin-bottom: 18px;
+}
+
+.label_checkbox {
+  flex-direction: row-reverse;
+  justify-content: left;
+  gap: 16px;
+  margin-bottom: 18px;
+}
+
+.checkbox {
+  width: 24px;
+  height: 24px;
+}
+
+.inputs_container {
+  flex-direction: column;
+  gap: 10px;
+}
+
+.label {
+  flex-direction: column;
+  color: var(--grey);
+}
+
+.flex_inputs_container {
+  flex-direction: column;
+  gap: 28px;
+}
+
+.input_container_flex {
+  width: 100%;
+  justify-content: space-between;
+}
+
+.form_container {
+  margin-bottom: 44px;
+}
+
+.payment_checkbox {
+  flex-direction: row-reverse;
+  justify-content: left;
+  gap: 16px;
+  margin-bottom: 40px;
+}
+
+.save_checkbox {
+  flex-direction: row-reverse;
+  justify-content: left;
+  gap: 16px;
+  margin-top: 44px;
+
+  text-transform: uppercase;
+}
+
+.submit_container {
+  margin-top: 16px;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.price_container {
+  gap: 40px;
+  margin-right: 28px;
+  color: var(--black);
+}
+
+.subtotal {
+  font-size: 18px;
+}
+
+.price {
+  font-size: 18px;
+  color: var(--black);
+}
+
+.pay_button {
+  justify-content: center;
+  align-items: center;
+
+  width: 180px;
+  padding: 8px 24px;
+
+  background-color: var(--disabled);
+  border-radius: 50px;
 
   font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+
+  text-transform: uppercase;
 }
 
-.error {
-  margin-top: 10px;
-  color: var(--red);
-
-  font-family: var(--font);
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+.payment_container {
+  justify-content: space-between;
+  margin-top: 24px;
+  margin-bottom: 24px;
 }
+
+.icons_container {
+  gap: 40px;
+}
+
+/* ------ Media rules ------ */
 
 @media screen and (min-width: 744px) {
+  .pay_button {
+    font-size: 24px;
+    padding: 16px 32px;
+  }
+
+  .price {
+    font-size: 32px;
+  }
+
+  .subtotal {
+    font-size: 32px;
+  }
+
+  .price_container {
+    margin-right: 0;
+  }
+
+  .submit_container {
+    display: flex;
+    align-items: end;
+
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .big_input {
+    width: 300px;
+    margin-bottom: 0;
+  }
+
+  .building_unit {
+    width: 138px;
+  }
+
+  .small_input {
+    width: 138px;
+  }
+
+  .input_container {
+    width: 462px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
   .error {
     margin-top: 8px;
   }
-}
 
-.form {
-  width: 328px;
-}
-
-@media screen and (min-width: 744px) {
   .form {
     width: 624px;
+  }
+
+  .header_delivery {
+    margin-top: 28px;
+    margin-bottom: 24px;
+  }
+
+  .inputs_container {
+    gap: 6px;
+  }
+
+  .form_container {
+    width: 462px;
+    margin: 0 auto;
   }
 }
 
 @media screen and (min-width: 1440px) {
+  .submit_goods_container {
+    width: 624px;
+  }
+
   .form {
     width: 462px;
     display: flex;
@@ -60,329 +289,5 @@
     gap: 348px;
     margin-left: 162px;
     width: 786px;
-  }
-}
-
-.header_contact {
-  margin-bottom: 32px;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  text-transform: capitalize;
-}
-
-.input {
-  width: 100%;
-  border-radius: 8px;
-  height: 32px;
-
-  padding-left: 8px;
-  padding-right: 8px;
-
-  border: 1px solid var(--grey);
-
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.header_delivery {
-  margin-top: 24px;
-  margin-bottom: 18px;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  text-transform: capitalize;
-}
-
-@media screen and (min-width: 744px) {
-  .header_delivery {
-    margin-top: 28px;
-    margin-bottom: 24px;
-  }
-}
-
-.label_checkbox {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: left;
-  gap: 16px;
-  margin-bottom: 18px;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-
-.checkbox {
-  width: 24px;
-  height: 24px;
-}
-
-.inputs_container {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-@media screen and (min-width: 744px) {
-  .inputs_container {
-    gap: 6px;
-  }
-}
-
-.label {
-  display: flex;
-  flex-direction: column;
-  color: var(--grey);
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.flex_inputs_container {
-  display: flex;
-  flex-direction: column;
-  gap: 28px;
-}
-
-.input_container_flex {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.form_container {
-  margin-bottom: 44px;
-}
-
-@media screen and (min-width: 744px) {
-  .form_container {
-    width: 462px;
-    margin: 0 auto;
-  }
-}
-
-.input_container {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-}
-
-@media screen and (min-width: 744px) {
-  .input_container {
-    width: 462px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-}
-
-.big_input {
-  width: 100%;
-  border-radius: 8px;
-  height: 32px;
-
-  padding-left: 8px;
-  padding-right: 8px;
-  border: 1px solid var(--grey);
-
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-@media screen and (min-width: 744px) {
-  .big_input {
-    width: 300px;
-    margin-bottom: 0;
-  }
-}
-
-.small_input {
-  width: 122px;
-  border-radius: 8px;
-  height: 32px;
-
-  padding-left: 8px;
-  padding-right: 8px;
-  border: 1px solid var(--grey);
-
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-@media screen and (min-width: 744px) {
-  .small_input {
-    width: 138px;
-  }
-}
-
-.building_unit {
-  width: 100%;
-
-  border-radius: 8px;
-  height: 32px;
-
-  padding-left: 8px;
-  padding-right: 8px;
-  border: 1px solid var(--grey);
-
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-@media screen and (min-width: 744px) {
-  .building_unit {
-    width: 138px;
-  }
-}
-
-.header_payment {
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  text-transform: capitalize;
-}
-
-.payment_checkbox {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: left;
-  gap: 16px;
-  margin-bottom: 40px;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-
-.save_checkbox {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: left;
-  gap: 16px;
-  margin-top: 44px;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  text-transform: uppercase;
-}
-
-.submit_container {
-  margin-top: 16px;
-  display: flex;
-
-  align-items: center;
-  margin-bottom: 40px;
-}
-
-@media screen and (min-width: 744px) {
-  .submit_container {
-    display: flex;
-    align-items: end;
-
-    flex-direction: column;
-    gap: 20px;
-  }
-}
-
-.price_container {
-  display: flex;
-  gap: 40px;
-  color: var(--black);
-  margin-right: 28px;
-}
-
-@media screen and (min-width: 744px) {
-  .price_container {
-    margin-right: 0;
-  }
-}
-
-.subtotal {
-  font-family: var(--font);
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-@media screen and (min-width: 744px) {
-  .subtotal {
-    font-size: 32px;
-  }
-}
-
-.price {
-  font-family: var(--font);
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-
-  color: var(--black);
-}
-
-@media screen and (min-width: 744px) {
-  .price {
-    font-size: 32px;
-  }
-}
-
-.pay_button {
-  width: 180px;
-  display: flex;
-  padding: 8px 24px;
-
-  justify-content: center;
-  align-items: center;
-
-  background-color: var(--disabled);
-  border-radius: 50px;
-
-  font-family: var(--font);
-  font-size: 16px;
-
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  text-transform: uppercase;
-}
-
-@media screen and (min-width: 744px) {
-  .pay_button {
-    font-size: 24px;
-    padding: 16px 32px;
-  }
-}
-
-.payment_container {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 24px;
-  margin-bottom: 24px;
-}
-
-.icons_container {
-  display: flex;
-  gap: 40px;
-}
-
-@media screen and (min-width: 1440px) {
-  .submit_goods_container {
-    width: 624px;
   }
 }
