added checkbo styles

--- a/app/order/order.module.css
+++ b/app/order/order.module.css
@@ -25,6 +25,8 @@
   color: var(--black);
 }
 
+/* ------ Media rules ------ */
+
 @media screen and (min-width: 360px) {
   .order {
     padding-bottom: 16px;
