--- a/components/order-goods/order-goods.module.css
+++ b/components/order-goods/order-goods.module.css
@@ -81,6 +81,8 @@
   gap: 8px;
 }
 
+/* ------ Media rules ------ */
+
 @media screen and (min-width: 744px) {
   .price_container_paragraph {
     flex-direction: row;
