--- a/components/order-user/order-user.module.css
+++ b/components/order-user/order-user.module.css
@@ -57,7 +57,8 @@
 .price_container,
 .pay_button,
 .payment_container,
-.icons_container {
+.icons_container,
+.payment_checkbox {
   display: flex;
 }
 
@@ -68,6 +69,7 @@
 }
 
 .error {
+  margin-left: 4px;
   margin-top: 10px;
   color: var(--red);
 }
@@ -110,6 +112,8 @@
 }
 
 .checkbox {
+  display: none;
+
   width: 24px;
   height: 24px;
 }
