--- a/components/order-user/order-user.module.css
+++ b/components/order-user/order-user.module.css
@@ -128,6 +128,11 @@
   color: var(--grey);
 }
 
+.span {
+  opacity: 0;
+  /* color: var(--black); */
+}
+
 .flex_inputs_container {
   flex-direction: column;
   gap: 28px;
