--- a/components/slider/slider.css
+++ b/components/slider/slider.css
@@ -4,6 +4,10 @@
   z-index: 10;
 }
 
+/* .custom-slider {
+  margin-left: auto;
+  margin-right: auto;
+} */
 /* .slick-list {
   width: 102rem;
   height: 51.125rem;
