--- a/components/selling/selling.module.css
+++ b/components/selling/selling.module.css
@@ -3,6 +3,84 @@
   padding-top: 1rem;
 }
 
+.sellers__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.sellers__img_container {
+  width: 253px;
+}
+
+.sellers__img_container_active {
+  width: 425px;
+}
+
+.sellers_img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.sellers__title {
+  color: black;
+  margin-top: 23px;
+  font-size: 32px;
+  font-weight: 400;
+}
+
+.sellers__title_active {
+  color: black;
+  margin-top: 32px;
+  font-size: 40px;
+  font-weight: 400;
+}
+
+.sellers__count {
+  color: black;
+  margin-top: 16px;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.sellers__count_active {
+  color: black;
+  margin-top: 16px;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.sellers__price {
+  margin-top: 12px;
+  color: black;
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.sellers__price_active {
+  margin-top: 12px;
+  color: black;
+  font-size: 32px;
+  font-weight: 500;
+}
+
+.swiper-slide.sellers__slide.swiper-slide-prev {
+  background-color: red;
+}
+
+/* .swiper-slide.sellers__slide.swiper-slide-prev .sellers_container {
+  background-color: red;
+} */
+
+.pagination {
+  height: 80px;
+  width: 100%;
+  margin-top: 18px;
+}
+
 .container {
   margin: 0 auto;
 }
@@ -23,13 +101,12 @@
 } */
 
 .selling__wrapper {
-  width: 100%;
-  position: relative;
-  display: flex;
-  flex-direction: column;
+  padding-left: 162px;
+  padding-right: 162px;
+  background: linear-gradient(to bottom, transparent 90%, var(--accent-second) 10%);
 }
 
-/* .selling__wrapper::after {
+.selling__wrapper::after {
   content: '';
   width: 100%;
   height: 750px;
@@ -37,9 +114,9 @@
   bottom: 80px;
   left: 0px;
   background: url('/images/sellers/bg.png') left bottom / cover no-repeat;
-  background-origin: padding-box;
-  z-index: 0;
-} */
+  /* background-origin: padding-box;
+  z-index: 0; */
+}
 
 /* .angel {
   width: 14.625rem;
